--- a/package.json
+++ b/package.json
@@ -16,7 +16,25 @@
   ],
   "author": "GitHub",
   "license": "CC0-1.0",
+  "dependencies": {
+    "iohook": "^0.9.3"
+  },
   "devDependencies": {
     "electron": "^20.0.3"
+  },
+  "iohook": {
+    "targets": [
+      "node-72",
+      "electron-85"
+    ],
+    "platforms": [
+      "win32",
+      "darwin",
+      "linux"
+    ],
+    "arches": [
+      "x64",
+      "ia32"
+    ]
   }
 }
