--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "electron-quick-start",
+  "name": "snaptext",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "App made with Electron to copy text from images into the operating system (macOS, Windows or Linux) clipboard",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
@@ -14,7 +14,18 @@
     "tutorial",
     "demo"
   ],
-  "author": "GitHub",
+  "author": {
+    "name": "Nacho Cordoner",
+    "email": "igcogi@gmail.com",
+    "url": "https://github.com/Gywem"
+  },
+  "contributors": [
+    {
+      "name" : "Fabio Peruchi",
+      "email" : "fhperuchi@gmail.com",
+      "url": "https://github.com/fhperuchi"
+    }
+  ],
   "license": "CC0-1.0",
   "dependencies": {
     "@aws-sdk/client-rekognition": "^3.154.0"
